--- a/templates/catagories/history.html
+++ b/templates/catagories/history.html
@@ -364,6 +364,11 @@
                             observer.unobserve(img);
                             layoutPackery(); // 
                                                 };
+                                                video.oncanplaythrough = () => {
+                            video.classList.add('loaded');
+                             observer.unobserve(video);
+                            layoutPackery(); // 👈 also reflow here
+};
                         };
                     }
                 }
