--- a/templates/catagories/vineyard.html
+++ b/templates/catagories/vineyard.html
@@ -193,6 +193,11 @@ img.onload = () => {
   observer.unobserve(img);
   layoutPackery(); // 👈 force re-layout after each image load
 };
+video.oncanplaythrough = () => {
+  video.classList.add('loaded');
+  observer.unobserve(video);
+  layoutPackery(); // 👈 also reflow here
+};
                     };
                 }
             }
