--- a/templates/catagories/preserving.html
+++ b/templates/catagories/preserving.html
@@ -25,125 +25,149 @@
 
 <div class="grid">
     <div class="grid-item">
-        <img data-src="{{ url_for('static', filename='/img/preserving/01.jpg') }}">
+        <img src="{{ url_for('static', filename='/img/preserving/01.jpg') }}">
     </div>
-
+    
     <div class="grid-item">
         <video autoplay loop muted playsinline>
-            <source data-src="{{ url_for('static', filename='/img/preserving/preserving.mp4') }}" type="video/mp4">
+            <source src="{{ url_for('static', filename='/img/preserving/preserving.mp4') }}" type="video/mp4">
         </video>
     </div>
+    
     <div class="grid-item">
-        <img data-src="{{ url_for('static', filename='/img/preserving/IMG_0437.jpg') }}">
+        <img src="{{ url_for('static', filename='/img/preserving/IMG_0437.jpg') }}">
     </div>
- 
+    
     <div class="grid-item">
         <video autoplay loop muted playsinline>
-            <source data-src="{{ url_for('static', filename='/img/preserving/walnutdye.webm') }}" type="video/webm">
-            <source data-src="{{ url_for('static', filename='/img/preserving/walnutdye.mp4') }}" type="video/mp4">
+            <source src="{{ url_for('static', filename='/img/preserving/walnutdye.webm') }}" type="video/webm">
+            <source src="{{ url_for('static', filename='/img/preserving/walnutdye.mp4') }}" type="video/mp4">
         </video>
     </div>
+    
     <div class="grid-item">
         <video autoplay loop muted playsinline>
-            <source data-src="{{ url_for('static', filename='/img/preserving/sauce.webm') }}" type="video/webm">
-            <source data-src="{{ url_for('static', filename='/img/preserving/sauce.mp4') }}" type="video/mp4">
+            <source src="{{ url_for('static', filename='/img/preserving/sauce.webm') }}" type="video/webm">
+            <source src="{{ url_for('static', filename='/img/preserving/sauce.mp4') }}" type="video/mp4">
         </video>
     </div>
+    
     <div class="grid-item">
-        <img data-src="{{ url_for('static', filename='/img/preserving/IMG_4144.jpg') }}">
+        <img src="{{ url_for('static', filename='/img/preserving/IMG_4144.jpg') }}">
     </div>
+    
     <div class="grid-item">
-        <img data-src="{{ url_for('static', filename='/img/preserving/IMG_5115.jpg') }}">
+        <img src="{{ url_for('static', filename='/img/preserving/IMG_5115.jpg') }}">
     </div>
+    
     <div class="grid-item">
-        <img data-src="{{ url_for('static', filename='/img/preserving/IMG_6457.jpg') }}">
+        <img src="{{ url_for('static', filename='/img/preserving/IMG_6457.jpg') }}">
     </div>
-
+    
     <div class="grid-item">
-        <img data-src="{{ url_for('static', filename='/img/preserving/IMG_6645.jpg') }}">
+        <img src="{{ url_for('static', filename='/img/preserving/IMG_6645.jpg') }}">
     </div>
+    
     <div class="grid-item">
-        <img data-src="{{ url_for('static', filename='/img/preserving/IMG_6931.jpg') }}">
+        <img src="{{ url_for('static', filename='/img/preserving/IMG_6931.jpg') }}">
     </div>
+    
     <div class="grid-item">
-        <img data-src="{{ url_for('static', filename='/img/preserving/03.jpg') }}">
+        <img src="{{ url_for('static', filename='/img/preserving/03.jpg') }}">
     </div>
- 
+    
     <div class="grid-item">
-        <img data-src="{{ url_for('static', filename='/img/preserving/IMG_6997.jpg') }}">
+        <img src="{{ url_for('static', filename='/img/preserving/IMG_6997.jpg') }}">
     </div>
+    
     <div class="grid-item">
-        <img data-src="{{ url_for('static', filename='/img/preserving/IMG_7085.jpg') }}">
+        <img src="{{ url_for('static', filename='/img/preserving/IMG_7085.jpg') }}">
     </div>
+    
     <div class="grid-item">
-        <img data-src="{{ url_for('static', filename='/img/preserving/IMG_7375.jpg') }}">
+        <img src="{{ url_for('static', filename='/img/preserving/IMG_7375.jpg') }}">
     </div>
+    
     <div class="grid-item">
-        <img data-src="{{ url_for('static', filename='/img/preserving/IMG_7472.jpg') }}">
+        <img src="{{ url_for('static', filename='/img/preserving/IMG_7472.jpg') }}">
     </div>
+    
     <div class="grid-item">
-        <img data-src="{{ url_for('static', filename='/img/preserving/IMG_7864.jpg') }}">
+        <img src="{{ url_for('static', filename='/img/preserving/IMG_7864.jpg') }}">
     </div>
+    
     <div class="grid-item">
         <video autoplay loop muted playsinline>
-            <source data-src="{{ url_for('static', filename='/img/preserving/cider2.webm') }}" type="video/webm">
-            <source data-src="{{ url_for('static', filename='/img/preserving/cider2.mp4') }}" type="video/mp4">
+            <source src="{{ url_for('static', filename='/img/preserving/cider2.webm') }}" type="video/webm">
+            <source src="{{ url_for('static', filename='/img/preserving/cider2.mp4') }}" type="video/mp4">
         </video>
     </div>
+    
     <div class="grid-item">
         <video autoplay loop muted playsinline>
-            <source data-src="{{ url_for('static', filename='/img/preserving/preserving2.mp4') }}" type="video/mp4">
+            <source src="{{ url_for('static', filename='/img/preserving/preserving2.mp4') }}" type="video/mp4">
         </video>
     </div>
+    
     <div class="grid-item">
-        <img data-src="{{ url_for('static', filename='/img/preserving/HERO1.jpg') }}">
+        <img src="{{ url_for('static', filename='/img/preserving/HERO1.jpg') }}">
     </div>
+    
     <div class="grid-item">
-        <img data-src="{{ url_for('static', filename='/img/preserving/IMG_8216.jpg') }}">
+        <img src="{{ url_for('static', filename='/img/preserving/IMG_8216.jpg') }}">
     </div>
-
- 
+    
     <div class="grid-item">
-        <img data-src="{{ url_for('static', filename='/img/preserving/IMG_8270.jpg') }}">
+        <img src="{{ url_for('static', filename='/img/preserving/IMG_8270.jpg') }}">
     </div>
+    
     <div class="grid-item">
-        <img data-src="{{ url_for('static', filename='/img/preserving/IMG_8291.jpg') }}">
+        <img src="{{ url_for('static', filename='/img/preserving/IMG_8291.jpg') }}">
     </div>
+    
     <div class="grid-item">
-        <img data-src="{{ url_for('static', filename='/img/preserving/IMG_8300.jpg') }}">
+        <img src="{{ url_for('static', filename='/img/preserving/IMG_8300.jpg') }}">
     </div>
+    
     <div class="grid-item">
-        <img data-src="{{ url_for('static', filename='/img/preserving/IMG_8681.jpg') }}">
+        <img src="{{ url_for('static', filename='/img/preserving/IMG_8681.jpg') }}">
     </div>
+    
     <div class="grid-item">
         <video autoplay loop muted playsinline>
-            <source data-src="{{ url_for('static', filename='/img/preserving/pulp.mp4') }}" type="video/mp4">
+            <source src="{{ url_for('static', filename='/img/preserving/pulp.mp4') }}" type="video/mp4">
         </video>
     </div>
+    
     <div class="grid-item">
-        <img data-src="{{ url_for('static', filename='/img/preserving/IMG_0507.jpg') }}">
+        <img src="{{ url_for('static', filename='/img/preserving/IMG_0507.jpg') }}">
     </div>
+    
     <div class="grid-item">
-        <img data-src="{{ url_for('static', filename='/img/preserving/IMG_8716.jpg') }}">
+        <img src="{{ url_for('static', filename='/img/preserving/IMG_8716.jpg') }}">
     </div>
+    
     <div class="grid-item">
         <video autoplay loop muted playsinline>
-            <source data-src="{{ url_for('static', filename='/img/preserving/labels4.webm') }}" type="video/webm">
-            <source data-src="{{ url_for('static', filename='/img/preserving/labels4.mp4') }}" type="video/mp4">
+            <source src="{{ url_for('static', filename='/img/preserving/labels4.webm') }}" type="video/webm">
+            <source src="{{ url_for('static', filename='/img/preserving/labels4.mp4') }}" type="video/mp4">
         </video>
     </div>
+    
     <div class="grid-item">
-        <img data-src="{{ url_for('static', filename='/img/preserving/IMG_9268.jpg') }}">
+        <img src="{{ url_for('static', filename='/img/preserving/IMG_9268.jpg') }}">
     </div>
-
+    
     <div class="grid-item">
-        <img data-src="{{ url_for('static', filename='/img/preserving/02.jpg') }}">
+        <img src="{{ url_for('static', filename='/img/preserving/02.jpg') }}">
     </div>
+    
     <div class="grid-item">
         <video autoplay loop muted playsinline>
-            <source data-src="{{ url_for('static', filename='/img/preserving/cider3.mp4') }}" type="video/mp4">
+            <source src="{{ url_for('static', filename='/img/preserving/cider3.mp4') }}" type="video/mp4">
         </video>
     </div>
+    
 
 
 </div>
